[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Props/ouro5.png" type="Texture" id=1]
[ext_resource path="res://Objetos/Coletavel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objetos/Loot/Gold.gd" type="Script" id=3]
[ext_resource path="res://Assets/SFX/gold.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]

[node name="Gold" groups=["Audio"] instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="2"]
stream = ExtResource( 4 )
volume_db = -4.37

[connection signal="body_entered" from="." to="." method="_on_Gold_body_entered"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
